# arxiv-dspy

./: .gitignore  agent.py  cli.py  config.py  ingestion.py  main.py  papers.py  pyproject.toml  rag.py  retriever.py
app/: config.py  schemas.py  server.py
app/routes/: __init__.py  agent.py  papers.py  search.py
app/services/: agent.py  arxiv.py  ingestion.py  rag.py  store.py
app/services/guardrails/: __init__.py  hallucination.py  injection.py  relevance.py
scripts/: seed_kb.py
