[project]
name = "arxiv-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.1",
    "dspy>=3.1.3",
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.115.0",
    "numpy>=2.4.4",
    "pymupdf>=1.27.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "supabase>=2.0.0",
    "langfuse>=2.0.0",
    "openinference-instrumentation-dspy",
    "nltk",
]
